--- a/Tarea_3/repote_3.tex
+++ b/Tarea_3/repote_3.tex
@@ -44,7 +44,7 @@ Esta obra que revisamos está escrita en inglés y se conforma por un conjunto d
 
 
 \section{Metodología}
-Para cumplir con nuestro objetivo, primeramente, procedimos a descargar el texto con el programa “R- 4.0.2” \cite{rproject} , dado que la biblioteca Gutenberg \cite{guten} permite tal descarga libremente.
+Para cumplir con nuestro objetivo, primeramente, procedimos a descargar el texto con el programa R- 4.0.2 \cite{rproject} , dado que la biblioteca Gutenberg \cite{guten} permite tal descarga libremente.
 Como siguiente paso, se removió todo carácter especial no alfa numérico, es decir, los símbolos tipográficos (guiones, cursivas, negritas, etc.) para limpiar el texto.
 Debido a que la frecuencia de datos era dominada principalmente por artículos, pronombres personales, conjunciones y números, se hizo una hoja de datos en Microsoft Excel \cite{excel} con este tipo de palabras. Posteriormente, se le ordenó al programa limpiar el texto de dicho contenido.
 Con el resto del léxico, se procedió a calcular la frecuencia de las palabras restantes con el programa R para ver las probabilidades de distribución cuantitativa.
