--- a/Tarea_3/repote_3.tex
+++ b/Tarea_3/repote_3.tex
@@ -80,6 +80,7 @@ Con esta distribución, que es primordial en el análisis de muestras pequeñas,
 \subsection{Distribución binomial negativa}
 Con esta distribución se repite un experimento hasta juntar un número de casos requeridos de éxito. En nuestro trabajo, con este modelo se obtuvo la probabilidad de 15 palabras conformadas por más de 6 caracteres.\autoref{fig:Negativo}
 \subsection{Distribución regular}
+Es la distribución de probabilidad más importante por sus propiedades estadísticas. Supone que en experimentos repetidos, la mayor parte de los resultados coincidirán con un resultado promedio.
 Con este modelo se obtiene los resultados de un número determinado de experimentos. En nuestro análisis con la aplicación de dicho modelo se obtuvieron las probabilidades de sacar palabras con más de 7 caracteres. \autoref{fig:Regular}
 
 \begin{figure}[b]
