--- a/Tarea_5/ref.bib
+++ b/Tarea_5/ref.bib
@@ -5,22 +5,8 @@
   year         = {2019}
 }
 
-@misc{excel,
-  author       = {{Microsoft Office}},
-  title        = {{Microsoft Excel}},
-  howpublished = {\url{https://www.microsoft.com/es-mx/microsoft-365/excel}},
-  year         = {2011}
-}
-
-@misc{guten,
-    author    = "{{Michael Hart}}",
-    title     = "{{Project Gutenberg}}",
-    howpublished = {\url{https://www.gutenberg.org/}},
-    year = 1971
-}
-@book{proverbs,
-    author    = "{{A. L. O. E.}}",
-    title     = "{{Precepts in Practice; or, Stories Illustrating the Proverbs}}",
-    howpublished = {\url{https://www.gutenberg.org/files/58791/58791-0.txt}},
-    year = 2019
+@misc{MaterialClase,
+	author = {{Satu Elisa Schaeffer}},
+	title  ={{Modelos probabilistas aplicados}},
+	howpublished = {Sitio en, \url{https://elisa.dyndns-web.com/teaching/prob/pisis/prob.html}}
 }
