--- a/Tarea_5/Reporte.tex
+++ b/Tarea_5/Reporte.tex
@@ -71,7 +71,7 @@ Por ejemplo, si elaboráramos una encuesta de la edad de cada uno de los 150 est
 Pero si esto lo aproximamos a una situación ideal, no tomando la edad de solo 150 individuos sino de 5000 estudiantes, entonces veremos que la forma de nuestra distribución se acerca a la curva de la distribución normal \autoref{fig:Regular}, esta curva nos permite ver dos características de distribución, la asimétrica y la asintótica:
 
 
- a)\textbf{Asimétrica} , lo cual significa que la media es igual a los valores de la moda y la mediana, en otras palabras, los alumnos que estén más cerca del promedio, son más numerosos que los que están más alejados de este promedio, esto también implica que se cumple la siguiente ecuación:
+ a) \textbf{Simétrica} , lo cual significa que la media es igual a los valores de la moda y la mediana, en otras palabras, los alumnos que estén más cerca del promedio, son más numerosos que los que están más alejados de este promedio, esto también implica que se cumple la siguiente ecuación:
  
 \[f_X(\mu - x) = f_X(\mu + x) \, \forall x\in \mathbb{R} \]
 
