--- a/Tarea_6/Reporte.tex
+++ b/Tarea_6/Reporte.tex
@@ -109,7 +109,7 @@ También hay analizar qué tipo de muestras tenemos, si es que son independiente
 
 La siguiente pregunta que debemos contestar es ¿qué tipo de datos tenemos? ya sean variables cualitativas o cuantitativas, al tener estos datos debemos corroborar si nuestros datos cumplen o no con los supuestos (normalidad, homogeneidad, independencia), con esto podremos elegir entre pruebas paramétricas, no paramétricas y robustas \cite{Articulo_3}.
 
-Como paso final hay que analizar si podemos confiar en los resultados datos por nuestra prueba estadística \textit{p-value} graficándolos para decidir \cite{Articulo_4}.
+Como paso final hay que analizar si podemos confiar en los resultados datos por nuestra prueba estadística \textit{p-value} graficándolos para decidir.
 \subsection{¿Cuáles son los supuestos para aplicar técnicas paramétricas?}
 Se requiere contar con la información de la distribución, además, tener eventos independientes, una muestra grande de números y seleccionar muestras al azar.
 
