--- a/Tarea_6/Reporte.tex
+++ b/Tarea_6/Reporte.tex
@@ -95,7 +95,7 @@ Es la capacidad de un experimento para conducir al rechazo de la hipótesis nula
   
 \item No paramétricas:
   \begin{enumerate}
-    \item chi squared test,
+    \item prueba chi-cuadrado,
     \item coeficientes de correlación e independencia para tabulaciones cruzadas,
     \item coeficientes de correlación por rangos ordenados Spearman y Kendall,
     \item prueba de suma de rango Wilcoxon.
