--- a/Tarea_6/Reporte.tex
+++ b/Tarea_6/Reporte.tex
@@ -104,14 +104,11 @@ Es la capacidad de un experimento para conducir al rechazo de la hipótesis nula
 
 
 \subsection{Resume la guía para encontrar la prueba estadística que buscas}
-Al escoger una prueba estadística debemos preguntarnos primeramente ¿cuál es nuestro objetivo? Asociar o comparar, aunque ambas establecen relaciones, la comparación evalúa estas relaciones entre uno o varios grupos.
-También hay analizar qué tipo de muestras tenemos, si es que son independientes o relacionadas, las relacionadas pueden ser tipo antes-después, como por ejemplo el estudio de pacientes donde se comparan antes y después de la aplicación de un tratamiento.
 
-La siguiente pregunta que debemos contestar es ¿qué tipo de datos tenemos? ya sean variables cualitativas o cuantitativas, al tener estos debemos corroborar si nuestros datos cumplen o no con los supuestos (normalidad, homogeneidad, independencia), con esto podremos elegir entre pruebas paramétricas, no paramétricas y robustas \cite{Articulo_3}.
-
-Como paso final hay que analizar si podemos confiar en los resultados datos por nuestra prueba estadística \textit{p-value} graficándolos para decidir.
-\subsection{¿Cuáles son los supuestos para aplicar técnicas paramétricas?}
-Se requiere contar con la información de la distribución, además, tener eventos independientes, una muestra grande de números y seleccionar muestras al azar.
+Al escoger una prueba estadística, debemos preguntarnos primeramente si nuestro objetivo es asociar o comparar, pues, aunque ambas establecen relaciones, la comparación evalúa dichas relaciones entre uno o varios grupos. También, hay analizar qué tipo de muestras tenemos, si es que son independientes o relacionadas. Es necesario diferenciar entre ambas muestras, ya que las relacionadas pueden ser del tipo antes-después, como por ejemplo el estudio de pacientes donde se comparan antes y después de la aplicación de un tratamiento.
+Otra pregunta que debemos hacernos es qué tipo de datos tenemos, ¿son variables cualitativas
+o cuantitativas? Al elegir entre una y otra las variables debemos corroborar si nuestros datos cumplen o no con los supuestos (normalidad, homogeneidad, independencia), de este modo, podremos elegir entre pruebas paramétricas, no paramétricas y robustas \cite{Articulo_3}.
+Como paso final, hay que analizar si podemos contar con los resultados dados por nuestra prueba estadística \textit{p-value} graficándolos para decidir .
 
 \section{Pruebas estadísticas}
 A continuación veremos las mas comunes pruebas estadísticas \cite{Articulo_0} y su aplicación en R         \cite{rproject}, junto con datos obtenidos de INEGI \cite{inegi}.
@@ -132,7 +129,7 @@ Lo expresaremos en R como:
 
 \subsection{Wilcoxon Signed Rank Test.}
 Esta prueba estadística es un método no paramétrico que evalúa la media de una muestra sin asumir que esta distribuida normalmente, este puede ser una alternativa al t-Test, especialmente cuando no se tiene información de la distribución en que sigue \cite{Articulo_0}.
-usaremos como muestra el numero de visitantes que ingresan al país por mes por la vía Terrestre el cual asumimos no tiene una distribución normal (\autoref{fig:Terrestre}), según los datos obtenidos del INEGI \cite{inegi}.
+usaremos como muestra el numero de visitantes que ingresan al país por mes por la vía terrestre el cual asumimos no tiene una distribución normal (\autoref{fig:Terrestre}), según los datos obtenidos del INEGI \cite{inegi}.
 Lo expresaremos en R como:
   \begin{lstlisting}
 	wilcox.test(VisitantesTerrestres, mu=640049, conf.int = TRUE)
@@ -147,7 +144,7 @@ Lo expresaremos en R como:
 
 \subsection{Two Sample t-Test and Wilcoxon Rank Sum Test.}
 Tanto t-Test como Wilcoxon rank pueden ser usados para comparar la media de 2 muestras, la diferencia como ya dijimos es que t-Test asume que la muestra sigue una distribución normal mientras que Wilcoxon rank no \cite{Articulo_0}.
-Usaremos nuestras 2 muestras anteriores que son el numero de visitantes que ingresan al país por mes a través de la vía Terrestre y Aérea (\autoref{fig:Terrestre} y \autoref{fig:Avion}), según los datos obtenidos del INEGI \cite{inegi}.
+Usaremos nuestras 2 muestras anteriores que son el numero de visitantes que ingresan al país por mes a través de la vía terrestre y aérea (\autoref{fig:Terrestre} y \autoref{fig:Avion}), según los datos obtenidos del INEGI \cite{inegi}.
 Lo expresaremos en R como:
   \begin{lstlisting}
 	wilcox.test(VisitantesTerrestres, VisitantesPorAvion, paired = TRUE)
