--- a/Tarea_6/Reporte.tex
+++ b/Tarea_6/Reporte.tex
@@ -173,12 +173,12 @@ Lo expresaremos en R como:
  
 \begin{figure}[b]
 \centering
-\subcaptionbox{Histograma que muestra la frecuencia de turistas ingresados al mes por la vía Aérea.}{\includegraphics[width=0.4\textwidth]{Avion.png}}%
+\subcaptionbox{Histograma que muestra la frecuencia de turistas ingresados al mes por la vía aérea.}{\includegraphics[width=0.4\textwidth]{Avion.png}}%
 \hfill
-\subcaptionbox{Gráfico con información de la media de ingresos turísticos por la vía Aérea.}{\includegraphics[width=0.4\textwidth]{AvionB.png}}%
+\subcaptionbox{Gráfico con información de la media de ingresos turísticos por la vía aérea.}{\includegraphics[width=0.4\textwidth]{AvionB.png}}%
 \hfill
 
-\caption{Gráficos que muestran el ingreso de turistas al país cada mes por medio de la vía Aérea.}
+\caption{Gráficos que muestran el ingreso de turistas al país cada mes por medio de la vía aérea.}
 \label{fig:Avion}
 \end{figure}
 
