--- a/Tarea_6/Reporte.tex
+++ b/Tarea_6/Reporte.tex
@@ -125,7 +125,7 @@ Lo expresaremos en R como:
 	alternative hypothesis: true mean is not equal to 1540000
    \end{lstlisting}
    
-   En esta prueba estadística quisimos demostrar que la media de personas que entran al país por avión al mes es de \textit{1,540,000} siendo esta nuestra hipotesis nula, sin embargo la prueba produjo un \textit{p-value} mayor al nivel de significancia de \textit{0.05}, por lo que no rechazamos nuestra hipotesis nula.
+   En esta prueba estadística, quisimos demostrar que la media de personas que entran al país por avión al mes es de \textit{1,540,000} siendo esta nuestra hipotesis nula, sin embargo la prueba produjo un \textit{p-value} mayor al nivel de significancia de \textit{0.05}, por lo que no rechazamos nuestra hipotesis nula.
 
 \subsection{Wilcoxon Signed Rank Test.}
 Esta prueba estadística es un método no paramétrico que evalúa la media de una muestra sin asumir que esta distribuida normalmente, este puede ser una alternativa al t-Test, especialmente cuando no se tiene información de la distribución en que sigue \cite{Articulo_0}.
